--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -215,9 +215,9 @@ a {
     background: 50% 0 repeat-y fixed;
     -webkit-background-size: cover;
     background-size: cover;
-    background-position: center center;
+    background-position: left top;
     color: #ffffff;
-    display: -webkit-box;
+    display: flex;
     display: -webkit-flex;
      display: -ms-flexbox;
     display: flex;
@@ -226,6 +226,7 @@ a {
       -ms-flex-align: center;
           align-items: center;
     height: 100vh;
+    text-align: left;
 }
 
 #home h3 {
@@ -638,99 +639,70 @@ a {
 /*---------------------------------------
     Price section              
 -----------------------------------------*/
-#price {
+#our_price {
   background: url('../images/price-bg.jpg') 100% 0 repeat-y fixed;
-    -webkit-background-size: cover;
-    background-size: cover;
-    background-position: center center;
-    color: #ffffff;
+  background-size: cover;
+  background-position: center center;
+  color: #ffffff;
 }
 
-#price .pricing__item {
+#our_price .wow {
   position: relative;
-  display: -webkit-flex;
   display: flex;
-  -webkit-flex-direction: column;
   flex-direction: column;
-  -webkit-align-items: stretch;
   align-items: stretch;
   text-align: center;
-  -webkit-flex: 0 1 330px;
   flex: 0 1 330px;
-}
-
-#price .pricing__feature-list {
-  text-align: left;
-}
-
-#price .pricing__action {
-  color: inherit;
-  border: none;
-  background: none;
-}
-
-#price .pricing__action:focus {
-  outline: none;
-}
-
-#price .pricing__item {
   font-size: 20px;
   margin-top: 72px;
   padding: 2em;
   cursor: default;
   color: #fff;
   border: 1px solid #666;
-  -webkit-transition: background-color 0.6s, color 0.3s;
   transition: background-color 0.6s, color 0.3s;
 }
 
-#price .pricing__item:nth-child(2) {
+#our_price .wow:nth-child(odd) {
   border-right: none;
-  border-left: none;
 }
 
-#price .pricing__item:hover {
+#our_price .wow:hover {
   color: #444;
   background: #ffffff;
   border-color: transparent;
 }
 
-#price .pricing__title {
-  font-size: 2em;
+#our_price h3.pricing__title {
+  font-size: 16em;
   width: 100%;
   margin: 0;
   padding: 0;
 }
 
-#price .pricing__price {
-  font-size: 1.45em;
+#our_price .pricing__price {
+  font-size: 14em;
   font-weight: bold;
-  line-height: 120px;
+  line-height: 200px;
   width: 120px;
   height: 120px;
   margin: 1.15em auto 0.3em;
   border-radius: 50%;
   background: #ffffff;
-  -webkit-transition: color 0.3s, background 0.3s;
   transition: color 0.3s, background 0.3s;
 }
 
-#price .pricing__item:first-child .pricing__price {
+#our_price .wow:first-child .pricing__price {
   background: #26253a;
 }
 
-#price .pricing__item:nth-child(2) .pricing__price {
-  background: #26253a;
-}
-
-#price .pricing__item:hover .pricing__price {
+#our_price .wow:nth-child(odd):hover .pricing__price {
   color: #fff;
   background: #222;
 }
 
-#price .pricing__feature-list {
+#our_price .pricing__feature-list {
   margin: 0;
-  padding: 1em 1em 2em 1em;
+  padding: 1em;
   font-weight: bold;
   list-style: none;
   letter-spacing: 0.6px;
@@ -738,7 +710,7 @@ a {
   text-align: center;
 }
 
-#price .pricing__action {
+#our_price .pricing__action {
   font-weight: bold;
   margin-top: auto;
   padding: 18px 48px;
@@ -748,20 +720,17 @@ a {
   background: #26253a;
   text-transform: uppercase;
   letter-spacing: 3px;
-  -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
   transition: transform 0.3s, opacity 0.3s;
-  -webkit-transform: translate3d(0, -15px, 0);
   transform: translate3d(0, -15px, 0);
 }
 
-#price .pricing__item:hover .pricing__action {
+#our_price .wow:hover .pricing__action {
   opacity: 1;
-  -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
 
-#price .pricing__action:hover,
-#price .pricing__action:focus {
+#our_price .pricing__action:hover,
+#our_price .pricing__action:focus {
   background: #222;
 }
 
@@ -867,79 +836,6 @@ footer .copyright-text {
 .social-icon li a:hover {
     background: #ffffff;
 }
-/*---------------------------------------
-   Register single page            
------------------------------------------*/
-#register {
-  margin:0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-  position: relative;
-  max-width: 700px;
-  width: 100%;
-  background: rgb(121, 8, 8);
-  padding: 25px;
-  border-radius: 8px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
- 
-}
-
-#register.body {
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-  background: rgb(130, 106, 251);
-} 
-#register.container{
-  position: relative;
-  max-width: 700px;
-  width: 100%;
-  background: white;
-  padding: 25px;
-  border-radius: 8px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-  
-}
-#register.container header{
-  font-size: 1.5rem;
-  color: #333;
-  font-weight: 500;
-  text-align: center;
-  
-  
-}
-#register.container.form{
-  margin-top: 30px;
-}
-#register.container.form.input-box{
-  width: 100%;
-  margin-top: 20px;
-  
-  
-}
-#register.container.form.input-box label{
-  color: #333;
-}
-#register.container.form.input-box input{
-  position: relative;
-  height: 50px;
-  width: 100%;
-  outline: none;
-  font-size: 1rem;
-  color: #707070;
-  margin-top: 8px;
-  border: 1px solid #ddd;
-  border-radius: 6px;
-  padding: 0 15px;
-}
-#register.container.form.form-button {
-  height: 100px;
-  width: 100%;
-}
-
 
 /*---------------------------------------
    Responsive styles            
